@@ -71,7 +71,7 @@ public:
 	 *
 	 * This will normally be the playing team.
 	 */
-	void scroll_to_leader(unit_map& units, int side, SCROLL_TYPE scroll_type = ONSCREEN);
+	void scroll_to_leader(unit_map& units, int side, SCROLL_TYPE scroll_type = ONSCREEN,bool force = true);
 
 	/**
 	 * Function to display a location as selected.
