@@ -17,6 +17,8 @@ Version 1.5.7+svn:
      a player name, replacing the old whisper dialog
    * Automatically select the game the selected player is in
    * Try to preserve the selected player when the player list is updated
+   * Added an option to avoid auto-scroll to ennemy units during oponent's
+     turn
  * Language and i18n:
    * updated translations: Czech, Danish, German, Hungarian, Italian, Japanese,
      Slovak, Spanish
